--- a/tmpl/blog.html
+++ b/tmpl/blog.html
@@ -1,31 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{if .Title}}{{.Title}}{{else}}Blog{{end}}</title>
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-      line-height: 1.6;
-    }
-    a { color: #0366d6; }
-    h1 { margin-bottom: 10px; }
-    .date { color: #666; margin-bottom: 20px; }
-    .posts li { margin-bottom: 10px; }
-    .counter {
-      background: #f6f8fa;
-      padding: 10px;
-      border-radius: 5px;
-      margin-top: 20px;
-      text-align: center;
-    }
-  </style>
-</head>
-<body>
+{{template "header.html" .}}
+<body class="blog-body">
   <p><a href="/">&larr; Home</a></p>
   {{if .IsIndex}}
     <h1>Blog</h1>
@@ -33,14 +7,14 @@
       {{range .Posts}}
         <li>
           <a href="/blog/{{.Slug}}">{{.Title}}</a>
-          <div class="date">{{.Date.Format "January 2, 2006"}}</div>
+          <div class="date">{{formatDate .Date}}</div>
         </li>
       {{end}}
     </ul>
   {{else}}
     <p><a href="/blog">&larr; Back to posts</a></p>
     <h1>{{.Post.Title}}</h1>
-    <div class="date">{{.Post.Date.Format "January 2, 2006"}}</div>
+    <div class="date">{{formatDate .Post.Date}}</div>
     <div>{{.Post.Content}}</div>
   {{end}}
   <div class="counter">Page views: {{.Count}} 🌷</div>
